overflow of x axis is solved

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,8 @@
 }
 
 body {
-    margin-top: 0
+    margin-top: 0;
+    overflow-x:hidden;
 }
 
 .navbar {
@@ -44,8 +45,8 @@ body {
 }
 
 #main-container {
-    margin-left: auto;
-    margin-right: auto;
+    /*margin-left: auto;*/
+    /*margin-right: auto;*/
     /*width: 90%;*/
 }
 
@@ -54,8 +55,9 @@ body {
     display: grid;
     position: relative;
     grid-template-rows: 1fr;
-    width: 99vw;
-    height: 99vh;
+    width: 100vw;
+    height: 100vh;
+    max-width: 100%;
     /*border: 1px solid black;*/
 }
 
